src/test/pass/match_simple.ly
enum class Option[A] {
    Some(A),
    None
}

var v = Some(10)

match v: {
    case Some(s):
    case None:
        print("Failed!\n")
}
